--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -75,7 +75,7 @@
     {
       "data": {
         "stringId": 304,
-        "text": "Total DRAUGR burned since launch"
+        "text": "Total VIKING burned since launch"
       }
     },
     {
@@ -123,13 +123,13 @@
     {
       "data": {
         "stringId": 320,
-        "text": "Stake LP tokens to earn DRAUGR"
+        "text": "Stake LP tokens to earn VIKING"
       }
     },
     {
       "data": {
         "stringId": 322,
-        "text": "Stake Draugr, get SYRUP."
+        "text": "Stake Viking, get SYRUP."
       }
     },
     {
@@ -153,7 +153,7 @@
     {
       "data": {
         "stringId": 334,
-        "text": "Every time you stake and unstake DRAUGR tokens, the contract will automatically harvest DRAUGR rewards for you!"
+        "text": "Every time you stake and unstake VIKING tokens, the contract will automatically harvest VIKING rewards for you!"
       }
     },
     {
@@ -219,7 +219,7 @@
     {
       "data": {
         "stringId": 358,
-        "text": "Draugr price"
+        "text": "Viking price"
       }
     },
     {
@@ -243,7 +243,7 @@
     {
       "data": {
         "stringId": 380,
-        "text": "1 DRAUGR = 1 SYRUP"
+        "text": "1 VIKING = 1 SYRUP"
       }
     },
     {
@@ -291,7 +291,7 @@
     {
       "data": {
         "stringId": 400,
-        "text": "SYRUP holders proportionally split 25% of DRAUGR block emissions each day (10 DRAUGR per block), Rewards are distributed each block."
+        "text": "SYRUP holders proportionally split 25% of VIKING block emissions each day (10 VIKING per block), Rewards are distributed each block."
       }
     },
     {
@@ -351,13 +351,13 @@
     {
       "data": {
         "stringId": 424,
-        "text": "%num% DRAUGR"
+        "text": "%num% VIKING"
       }
     },
     {
       "data": {
         "stringId": 426,
-        "text": "Spend DRAUGR to buy tickets, contributing to the lottery pot. Ticket purchases end approx. 30 minutes before lottery. Win prizes if 2, 3, or 4 of your ticket numbers match the winning numbers and their positions! Good luck!"
+        "text": "Spend VIKING to buy tickets, contributing to the lottery pot. Ticket purchases end approx. 30 minutes before lottery. Win prizes if 2, 3, or 4 of your ticket numbers match the winning numbers and their positions! Good luck!"
       }
     },
     {
@@ -435,19 +435,19 @@
     {
       "data": {
         "stringId": 454,
-        "text": "%num% DRAUGR Available"
+        "text": "%num% VIKING Available"
       }
     },
     {
       "data": {
         "stringId": 456,
-        "text": "Your amount must be a multiple of 10 DRAUGR"
+        "text": "Your amount must be a multiple of 10 VIKING"
       }
     },
     {
       "data": {
         "stringId": 458,
-        "text": "1 Ticket = 10 DRAUGR"
+        "text": "1 Ticket = 10 VIKING"
       }
     },
     {
@@ -495,7 +495,7 @@
     {
       "data": {
         "stringId": 478,
-        "text": "Ticket purchases are final. Your DRAUGR cannot be returned to you after buying tickets."
+        "text": "Ticket purchases are final. Your VIKING cannot be returned to you after buying tickets."
       }
     },
     {
@@ -507,7 +507,7 @@
     {
       "data": {
         "stringId": 482,
-        "text": "DRAUGR prizes to be claimed"
+        "text": "VIKING prizes to be claimed"
       }
     },
     {
@@ -543,13 +543,13 @@
     {
       "data": {
         "stringId": 494,
-        "text": "Approve DRAUGR"
+        "text": "Approve VIKING"
       }
     },
     {
       "data": {
         "stringId": 496,
-        "text": "SYRUP holders proportionally split 40% of DRAUGR block emissions each day (10 DRAUGR per block), Rewards are distributed each block."
+        "text": "SYRUP holders proportionally split 40% of VIKING block emissions each day (10 VIKING per block), Rewards are distributed each block."
       }
     },
     {
@@ -567,19 +567,19 @@
     {
       "data": {
         "stringId": 504,
-        "text": "You\u2019ll pay for the new tokens using DRAUGR-BNB LP tokens, which means you need to stake equal amounts of DRAUGR and BNB in a liquidity pool to take part."
+        "text": "You\u2019ll pay for the new tokens using VIKING-BNB LP tokens, which means you need to stake equal amounts of VIKING and BNB in a liquidity pool to take part."
       }
     },
     {
       "data": {
         "stringId": 506,
-        "text": "Get DRAUGR-BNB LP >"
+        "text": "Get VIKING-BNB LP >"
       }
     },
     {
       "data": {
         "stringId": 508,
-        "text": "The project gets the BNB, Draugr Swap burns the DRAUGR."
+        "text": "The project gets the BNB, Viking Swap burns the VIKING."
       }
     },
     {
@@ -597,7 +597,7 @@
     {
       "data": {
         "stringId": 514,
-        "text": "Launch your project with Draugr Swap, Binance Smart Chain\u2019s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC."
+        "text": "Launch your project with Viking Swap, Binance Smart Chain\u2019s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC."
       }
     },
     {
@@ -645,25 +645,25 @@
     {
       "data": {
         "stringId": 534,
-        "text": "Draugr Stats"
+        "text": "Viking Stats"
       }
     },
     {
       "data": {
         "stringId": 536,
-        "text": "Total DRAUGR Supply"
+        "text": "Total VIKING Supply"
       }
     },
     {
       "data": {
         "stringId": 538,
-        "text": "Total DRAUGR Burned"
+        "text": "Total VIKING Burned"
       }
     },
     {
       "data": {
         "stringId": 540,
-        "text": "New DRAUGR\/block"
+        "text": "New VIKING\/block"
       }
     },
     {
@@ -675,19 +675,19 @@
     {
       "data": {
         "stringId": 544,
-        "text": "DRAUGR to Harvest"
+        "text": "VIKING to Harvest"
       }
     },
     {
       "data": {
         "stringId": 546,
-        "text": "DRAUGR in Wallet"
+        "text": "VIKING in Wallet"
       }
     },
     {
       "data": {
         "stringId": 548,
-        "text": "Collecting DRAUGR"
+        "text": "Collecting VIKING"
       }
     },
     {
@@ -699,7 +699,7 @@
     {
       "data": {
         "stringId": 552,
-        "text": "DRAUGR to Collect"
+        "text": "VIKING to Collect"
       }
     },
     {
@@ -753,7 +753,7 @@
     {
       "data": {
         "stringId": 576,
-        "text": "Draugr Swap"
+        "text": "Viking Swap"
       }
     },
     {
@@ -765,7 +765,7 @@
     {
       "data": {
         "stringId": 580,
-        "text": "Stake DRAUGR to earn new tokens."
+        "text": "Stake VIKING to earn new tokens."
       }
     },
     {
@@ -783,7 +783,7 @@
     {
       "data": {
         "stringId": 586,
-        "text": "DRAUGR to burn (USD)"
+        "text": "VIKING to burn (USD)"
       }
     },
     {
@@ -795,7 +795,7 @@
     {
       "data": {
         "stringId": 590,
-        "text": "\u2b50\ufe0f Every time you stake and unstake LP tokens, the contract will automatically harvest DRAUGR rewards for you!"
+        "text": "\u2b50\ufe0f Every time you stake and unstake LP tokens, the contract will automatically harvest VIKING rewards for you!"
       }
     },
     {
@@ -813,13 +813,13 @@
     {
       "data": {
         "stringId": 596,
-        "text": "Buy DRAUGR and BNB tokens"
+        "text": "Buy VIKING and BNB tokens"
       }
     },
     {
       "data": {
         "stringId": 598,
-        "text": "Get DRAUGR-BNB LP tokens by adding DRAUGR and BNB liquidity"
+        "text": "Get VIKING-BNB LP tokens by adding VIKING and BNB liquidity"
       }
     },
     {
@@ -831,7 +831,7 @@
     {
       "data": {
         "stringId": 602,
-        "text": "While the sale is live, commit your DRAUGR-LP tokens to buy the IFO tokens"
+        "text": "While the sale is live, commit your VIKING-LP tokens to buy the IFO tokens"
       }
     },
     {
@@ -867,7 +867,7 @@
     {
       "data": {
         "stringId": 614,
-        "text": "Trade in for DRAUGR, or keep for your collection!"
+        "text": "Trade in for VIKING, or keep for your collection!"
       }
     },
     {
@@ -909,7 +909,7 @@
     {
       "data": {
         "stringId": 628,
-        "text": "When you trade in this NFT to receive DRAUGR, you will lose access to it forever!"
+        "text": "When you trade in this NFT to receive VIKING, you will lose access to it forever!"
       }
     },
     {
@@ -939,7 +939,7 @@
     {
       "data": {
         "stringId": 638,
-        "text": "Winners can trade in their NFTs for a DRAUGR value until the expiry date written below. If you don't trade in your NFT by then, don\u2019t worry: you\u2019ll still keep it in your wallet!"
+        "text": "Winners can trade in their NFTs for a VIKING value until the expiry date written below. If you don't trade in your NFT by then, don\u2019t worry: you\u2019ll still keep it in your wallet!"
       }
     },
     {
@@ -981,7 +981,7 @@
     {
       "data": {
         "stringId": 654,
-        "text": "Trade in for DRAUGR"
+        "text": "Trade in for VIKING"
       }
     },
     {
@@ -1107,7 +1107,7 @@
     {
       "data": {
         "stringId": 696,
-        "text": "Stake LP tokens to earn DRAUGR"
+        "text": "Stake LP tokens to earn VIKING"
       }
     },
     {
@@ -1149,13 +1149,13 @@
     {
       "data": {
         "stringId": 708,
-        "text": "The DRAUGR Lottery"
+        "text": "The VIKING Lottery"
       }
     },
     {
       "data": {
         "stringId": 710,
-        "text": "Buy tickets with DRAUGR"
+        "text": "Buy tickets with VIKING"
       }
     },
     {
@@ -1209,7 +1209,7 @@
     {
       "data": {
         "stringId": 10000,
-        "text": "Deposit Fee will be used to buyback DRAUGR"
+        "text": "Deposit Fee will be used to buyback VIKING"
       }
     },
     {
@@ -1221,7 +1221,7 @@
     {
       "data": {
         "stringId": 10002,
-        "text": "Stake tokens to earn DRAUGR"
+        "text": "Stake tokens to earn VIKING"
       }
     },
     {
