update typo error

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -759,7 +759,7 @@
     {
       "data": {
         "stringId": 578,
-        "text": "Recruit the mightest warriors on FTM!"
+        "text": "Recruit the mightiest warriors on FTM!"
       }
     },
     {
